--- a/HW1.html
+++ b/HW1.html
@@ -3,36 +3,75 @@
     body {background-color: #777777}
 
     div {background-color: #ebebeb;
-    text-align: center;
-     font-family: Arial, Helvetica, sans-serif;
-     color:#777777;
-     font-size: 110%;
+         text-align: center;
+         font-family: Arial, Helvetica, sans-serif;
+         color:#777777;
+         font-size: 110%;
      }
     #alpha {width:75%;
-     padding: 50px; 
-     margin: auto; 
-     margin-bottom: 20px}
-     section {padding: 40px; margin: auto; width:75%; margin-bottom: }
-     section {float: left;}
-     aside{float:left}
+            padding: 50px; 
+            margin: auto; 
+            margin-bottom: 20px}
+
+    #section {width:50%;
+             height: 300px;
+             margin-left: 30px;
+             margin-bottom: 15px;
+             margin-top: 15px;
+             float: left;}
+
+
+     #article {background: #777777;
+                color:#ebebeb;
+                margin: 45px;
+                    height: 250px;
+                    width: 24.5%;
+                top: 300px;
+                left: 35px;
+                float: left
+
+     }
+
+    #header {width:25%;
+             height:70px;
+             margin: 5px;
+             font-weight: bold;
+             position: absolute;
+             float: left;
+
+
+
+    }
+    #p {width:25%;
+             height:70px;
+             margin: 5px;
+             position: absolute;
+             float: left;
+             }
+
+
+    #aside{float:right;
+           width: 50%;
+           height: 300px;
+           margin-left: 15px;
+           margin-bottom: 15px;
+           margin-top: 15px
+
+
+
+
+           }
+
+
+
     </style>
 </head>
 
 <body>
 
-<div id="alpha">header</div> <div id="alpha">nav</div> <div> <section> section
+<div id="alpha">header</div> <div id="alpha">nav</div> <div id="section">section <div id="article">article <div id="header">h1,h2,h3</div> <div id="p">p</div> </div>
 
-<article>
-
-article
-
-</article>
-
-</section>
-
-<aside> aside</aside>
-
-</div>
+</div> <div id="aside">aside</div>
 
 <div id="alpha"> footer </div>
 
